[tool.poetry]
name = "bpm-demo"
version = "0.1.0"
description = "Event-driven Architectures demo"
authors = ["jumcdow <jumcdow@amazon.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.30.0"
constructs = "^10.1.43"
exceptiongroup = "^1.0.0-rc.8"
"aws-solutions-constructs.aws-lambda-stepfunctions" = "^2.10.0"
cdk-nag = "^2.18.18"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
black = "^22.6.0"
aws-lambda-powertools = "^1.26.3"
cdk-nag = "^2.16.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
